--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
 body {
-  margin: 0;
+  min-height: 100vh;
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.main {
-  background-color: #ffffff;
-  height: 100vh;
+.utilityvh {
+  min-height: 80vh;
 }
