--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -14,6 +14,10 @@ h1 {
   margin-top: 1.5rem;
 }
 
+.home-icons {
+  padding: 2rem auto;
+}
+
 @media all and (max-width: 600px) {
   h1 {
     font-size: 4rem;
